--- a/PongGame/app/src/main/res/layout/activity_pong.xml
+++ b/PongGame/app/src/main/res/layout/activity_pong.xml
@@ -64,18 +64,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.664" />
 
-    <!--
-    <ImageButton
+    <ToggleButton
+        android:id="@+id/play_pause_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/ic_pause_50"
+        android:textOff=""
+        android:textOn=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="20dp"
-        app:srcCompat="@drawable/ic_pause_50" />
-        -->
+        app:layout_constraintTop_toTopOf="parent"></ToggleButton>
+
+    <ImageButton
+        android:id="@+id/quit_game_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="280dp"
+        android:background="@null"
+        android:src="@drawable/ic_cross_50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/play_pause_button"
+        app:layout_constraintTop_toBottomOf="@id/play_pause_button" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
