--- a/PongGame/app/src/main/res/layout/fragment_register.xml
+++ b/PongGame/app/src/main/res/layout/fragment_register.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image_icon_register"
+            android:id="@+id/profile_image"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_centerInParent="true"
@@ -39,12 +39,8 @@
             android:layout_height="50dp"
             android:background="@android:color/transparent"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.709"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.915"
+            app:layout_constraintEnd_toEndOf="@id/profile_image"
+            app:layout_constraintBottom_toBottomOf="@id/profile_image"
             app:srcCompat="@drawable/ic_add_circle_35"
             tools:ignore="SpeakableTextPresentCheck" />
 
