--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/register_constraint_layout"
+    android:id="@+id/user_profile_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,104 +20,147 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image_icon"
+            android:id="@+id/profile_image"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/user_default_image"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
-            app:civ_border_width="1dp"
+            android:src="@drawable/user_default_image"
             app:civ_border_color="#FF000000"
+            app:civ_border_width="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/add_profile_image_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintEnd_toEndOf="@id/profile_image"
+            app:srcCompat="@drawable/ic_add_circle_35" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/email_field"
+        android:id="@+id/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:text="Email"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/constraint_layout_profile_image" />
 
     <TextView
         android:id="@+id/user_email"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/constraint_layout_profile_image" />
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/email_label"
+        app:layout_constraintTop_toBottomOf="@id/email_label" />
 
-    <TextView
-        android:id="@+id/username_field"
+    <ImageButton
+        android:id="@+id/edit_username_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="10dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_edit_24"
+        app:layout_constraintBottom_toBottomOf="@id/user_username"
+        app:layout_constraintStart_toEndOf="@id/user_username"
+        app:layout_constraintTop_toTopOf="@id/user_username" />
+
+    <TextView
+        android:id="@+id/username_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Username"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="@id/user_email"
         app:layout_constraintTop_toBottomOf="@id/user_email" />
 
     <TextView
         android:id="@+id/user_username"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_email" />
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/username_label"
+        app:layout_constraintTop_toBottomOf="@id/username_label" />
+
+    <EditText
+        android:id="@+id/user_username_input"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@id/username_label"
+        app:layout_constraintTop_toBottomOf="@id/username_label"/>
+
 
     <TextView
-        android:id="@+id/score_field"
+        android:id="@+id/score_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="10dp"
         android:text="Total score"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_email" />
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="@id/user_username"
+        app:layout_constraintTop_toBottomOf="@id/user_username" />
 
     <TextView
         android:id="@+id/user_score"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="140dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_email" />
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/score_label"
+        app:layout_constraintTop_toBottomOf="@id/score_label" />
 
     <Button
-        android:id="@+id/update_profile_button"
-        android:layout_width="320dp"
+        android:id="@+id/confirm_update_button"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Update profile"
+        android:text="Confirm"
+        android:visibility="invisible"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_score" />
+
+    <Button
+        android:id="@+id/undo_update_button"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Cancel"
+        android:visibility="invisible"
+        app:cornerRadius="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirm_update_button" />
 
     <Button
         android:id="@+id/log_out_button"
-        android:layout_width="320dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="20dp"
         android:text="Log out"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_score" />
+        app:layout_constraintTop_toBottomOf="@id/confirm_update_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
